layout tweaks to fix up the squished mode

--- a/src/css/Board.css
+++ b/src/css/Board.css
@@ -1,9 +1,6 @@
 .board {
     margin-left: 0rem;
     margin-right: 0rem;
-    --board-padding: 0.6rem;
-    padding: var(--board-padding);
-    padding-bottom: 0rem;   /* tasks have a margin on the bottom, which will form this spacing instead */
     background-color: rgb(0,0,0,0);
     border-radius: var(--border-radius);
 
